# http_rs

./: .env  .env.example  .gitignore  Cargo.toml  README.md
http/: lib.rs  request.rs  response.rs
http/database/: mod.rs
http/http/: method.rs  mod.rs  status.rs  version.rs
http/router/: mod.rs
public/: index.html  menu.html
src/: main.rs
src/database/: mod.rs
src/http/: method.rs  mod.rs  parts.rs  status_code.rs  version.rs
src/models/: mod.rs  query.rs
src/request/: mod.rs
src/response/: mod.rs
src/routes/: mod.rs  route.rs  router.rs
src/utils/: mod.rs
