[package]
name = "server"
version = "0.1.0"
edition = "2024"

[lib]
path = "http/lib.rs"     # tell Cargo where the lib is

[[bin]]
path = "src/main.rs"     # default binary
name = "server-bin"        # or any name you prefer

[dependencies]
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }

